- improved logger in `FILESTORAGE()`
- fixed functionality of `res.nocache()` method in the `res.stream()` method
- fixed `continuing` with QueryBuilder processing
- added `DB().language(prefix, skip)` method that sets a default prefix/skip values
- added better error handling for `MAPSCHEMA()`
- improved error outputing

========================
0.0.63
========================

- updated `F.runscript()` by adding `require` argument
- improved internal proxy functionality
- added `U.getExtensionFromContentType(value)`
- fixed `flow.unregister()` method
- added `MAKE(schema, model, [callback/$/controller], [novalidate], [controller])` method for validating data according to the schema
- added `$.on()` and `$.emit()` methods into the `SchemaOptions`
	- `$.on('end', function(err, response, [op_name]))` catches end of data processing
	- `$.on('data', function(response, [op_name]))` catches a response from a Schema operation
	- `$.on('error', function(err, [op_name]))` catches error
	- `$.on('response', function(response, [op_name]))`
- added `STATUS(id/$, data, [timeout])` for capturing of universal status (executes `DEF.onStatus(meta)`)
- added `DEF.onStatus(meta)` for capturing of universal status
	- `meta.date {Date}` last modified date
	- `meta.data {Object}`
	- `meta.id {String}`
- added `schema.array()` that allows you to receive data as Array
- removed `schema.before()` due to performance
- improved schemas
- added `schema.setDestroy(callback)` executed when the schema is removed
- added `schema.setTimer(callback)` executed every minute
- added supports for dynamic schemas in the form `NEWSCHEMA(function(schema))`
- fixed functionality in the `PROXY()` method
- updated `schema.addWorkflow()` by adding inheriting of other workflows
	- example: `schema.addWorkflow('check', 'Common --> check')`
- fixed decompression of colors in CSS
- fixed `error404` internal stats
- added `CONF.allow_stats_status` that stores all status objects
- updated making of snapshots