@@ -12,6 +12,7 @@
 - added `DB().language(prefix, skip)` method that sets a default prefix/skip values
 - added better error handling for `MAPSCHEMA()`
 - improved error outputing
+- fixed `RESTBuilder.promise([$])`
 
 ========================
 0.0.63
